# openfga-dsl-parser-wasm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
examples/: README.md
examples/go/: go.mod  go.sum  main.go
examples/js/: package-lock.json  package.json  server.js  webpack.config.js
examples/js/src/: index.js
examples/js/wasm/: openfga_dsl_parser.wasm
src/: lib.rs
