[package]
name = "openfga-dsl-parser-wasi"
repository = "https://github.com/dblclik/openfga-dsl-parser-wasi"
authors = ["Ben Elbert <b.elbert13@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "openfga_dsl_parser"
crate-type = ["cdylib"]

[dependencies]
openfga-dsl-parser = "1"
serde_json = "1.0.82"
wasm-bindgen = "0.2"
wasmedge-bindgen-macro = "0.4.0"
